# Stoppable

./: .clang-tidy  .directory  .gitignore  .gitlab-ci-templates.yml  .gitlab-ci.yml  .gitmodules  .hspt-cpp  .valgrind_targets.json  AUTHORS  CHANGELOG  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Doxyfile  NOTICE  README.md  ci-variables.yml  conanfile.py  sonar-project.properties
.gitlab/issue_templates/: Bug.md  Feature.md  Task.md
cmake/: ClangFormat.cmake  compiler_settings.cmake  conan_install.cmake  conan_provider.cmake  linter.cmake  macros.cmake  native-toolchain.cmake  toolchain-g++-8.cmake
conan/: conanfile.py
conan/test_package/: CMakeLists.txt  conanfile.py  example.cpp
docs/: .index.html  .w3.css  index.html  w3.css
docs/code_documentation/: header.html  main.md  stylesheet.css
docs/doxygen-awesome-css/: custom.css  doxygen-awesome.css
docs/manual/: 1_instalation.md  3_basic_usage.md  main.md
includes/: JobHandler.hpp  Routine.hpp  Stoppable.hpp  StoppableTask.hpp  Task.hpp
sources/: CMakeLists.txt
sources/Example/: CMakeLists.txt  main.cpp
test_package/: CMakeLists.txt  example.cpp
unit_tests/: CMakeLists.txt
unit_tests/Stoppable/: ExceptionPointee.hpp  RoutineTests.cc  TaskTests.cc
unit_tests/StoppableTask_TestsSuite/: StoppableTaskTests.cc
unit_tests/StoppableTestsSuite/: JobHandlerTests.cc  StoppableTaskTests.cc  TaskTests.cc
utility/: .amalgam.css  .amalgam_index.html  .create-static-website.py  .directory  .getProjectName.py  .getVersionFromTag.py  .lcov-ignores  Coverage_Ignores.txt  Doxyfile  checkCodeCoverage.py  createAmalgamWebsite.py  getProjectName.py  getVersionFromTag.py  makeRelease.py  run-clang-format.py  run-clang-tidy.py  run-lcov.py  run-valgrind.py  runValgrind.py  utilities.py
